add upload folder and change baseenitty

--- a/ogani-master/test.html
+++ b/ogani-master/test.html
@@ -95,6 +95,10 @@
 	}
 }
 
+
+function getCate
+
+
 function validateCate(){
 	var name = document.getElementById("cateName");
 	var description = document.getElementById("description");
