update dropdown category

--- a/ogani-master/index.html
+++ b/ogani-master/index.html
@@ -198,13 +198,19 @@
                         <div class="hero__search__form">
                             <form action="#">
                                 <div class="hero__search__categories">
-                                    All Categories
-                                    <span class="arrow_carrot-down"></span>
-                                </div>
+        All Categories <span onclick="myFunction();" class="arrow_carrot-down dropdowncate"></span>
+        
+    </div>
                                 <input type="text" placeholder="What do yo u need?">
                                 <button type="submit" class="site-btn">SEARCH</button>
                             </form>
+
                         </div>
+                        <div id="myDropDown" class="dropdown-content">
+            <span>Home</span>
+            <span>About</span>
+            <span>Contact</span>
+        </div>
                         <div class="hero__search__phone">
                             <div class="hero__search__phone__icon">
                                 <i class="fa fa-phone"></i>
