update product add

--- a/Admin/table.html
+++ b/Admin/table.html
@@ -896,7 +896,7 @@
                                                 <td>
                                                     <div class="table-data-feature">
                                                         <button class="item" data-toggle="tooltip" data-placement="top" title="Send">
-                                                            <i class="zmdi zmdi-mail-send"></i>
+                                                            <i class="zmdi zmdi-mail-details"></i>
                                                         </button>
                                                         <button class="item" data-toggle="tooltip" data-placement="top" title="Edit">
                                                             <i class="zmdi zmdi-edit"></i>
